--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@ body{
     height: 50px;
     font-size: medium;
     background-color:transparent;
-    border: 1px solid black;
-    box-shadow: 50px;
+    border: 1px solid white;
+
 
 }
 .sign-in:active{
     background-color: gray;
     color: aliceblue;
     border-color: greenyellow;
+    box-shadow: 3px 3px 3px 3px rgb(183, 183, 183);
+
 }
 
 
@@ -98,6 +100,9 @@ header{
     position: relative;
 
 }
+.bg-color.active{
+    display: block;
+}
 .bg-color:active{
     background-color: rgb(163, 177, 191);
     border: 1px;
@@ -138,7 +143,9 @@ header{
     
     background-color: rgb(229, 237, 245);
     border: 1px solid white;
-    height: 100dvh;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 3px rgb(183, 183, 183);
+    height: 50dvh;
     gap: 20px;
 
 }
@@ -223,35 +230,33 @@ ul :only-child{
 /*  */
 
 #navbar-1{
-    /* background-color: lightseagreen; */
-    height: 300%;
+    background-color: lightseagreen;
 }
 #navbar-2{
     display: none;
     background-color: palevioletred;
-    height: 200%;
 
 }
 
 #navbar-3{
     display: none;
     background-color: rgb(98, 128, 128);
-    height: 200%;
+    height: 100%;
 }
 #navbar-4{
     display: none;
     background-color:rgb(186, 247, 186);
-    height: 200%;
+    height: 100%;
 }
 #navbar-5{
     display: none;
     background-color:orangered;
-    height: 200%;
+    height: 100%;
 }
 #navbar-6{
     display: none;
     background-color: cornflowerblue;
-    height: 200%;
+    height: 100%;
 }
 /* hover2 on elipse */
 .hide-2{
@@ -262,6 +267,7 @@ ul :only-child{
     width: 60px;
     border-radius: 10px;
     text-align: center;
+    position: absolute;
 }
 
 .bg-color i{
@@ -275,7 +281,7 @@ ul :only-child{
 
 /*........ themes... */
 
-.color1-image{
+.c-container{
     display: none;
 
     max-width: fit-content;
@@ -284,13 +290,18 @@ ul :only-child{
     border-radius: 10px;
     flex-direction:column;
     margin: 10px 100px 0px 50px;
-    background-color: rgb(213, 216, 219);   
+    background-color: rgb(213, 216, 219);  
+    box-shadow: 3px 3px 3px 3px ;
+ 
 
 }
-
+.c-container.active{
+    display: block;
+    position: absolute;
+}
 /* login-page */
 
-#page{
+.page{
     display: none;
 
    background-color: tan;
@@ -301,7 +312,13 @@ ul :only-child{
    height: 500px;
    position: absolute;
    border: 1px solid teal;
+   box-shadow: 3px 3px 10px 10px black;
+
 }
+.page.active{
+    display: block;
+}
+
 .login-head{
     padding-bottom: 50px;
     color: whitesmoke;
